# repalgo

./: .env.example  .replit  README.md  app.py  app_settings.py  pyproject.toml  replit.md
attached_assets/: Pasted--Project-Blueprint-AI-Options-Trading-Agent-Project-Name-AI-Options-Trader-Agent-Visio-1760458014199_1760458014201.txt
core/: ai_learn.py  auth.py  greeks.py  journal.py  live_trade.py  market.py  openalgo_auth.py  openalgo_market.py  paper_trade.py  reports.py  risk.py  signals.py
core/brokers/: __init__.py  angelone.py  base.py  dhan.py  factory.py  nubra.py  upstox.py  zerodha.py
data/: mock_data.json  trades.db
utils/: helpers.py
